--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,9 @@ serde = { version = "1", features = ["derive"] }
 ode_solvers = "0.3.7"
 itertools = "0.10.5"
 thiserror = "1.0.38"
+physical_constants = "0.5.0"
+assert_float_eq = "1.1.3"
+anyhow = "1.0.69"
+
+[dev-dependencies]
+
