--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ thiserror = "1.0.38"
 physical_constants = "0.5.0"
 assert_float_eq = "1.1.3"
 anyhow = "1.0.69"
+nalgebra = "0.32.1"
 
 [dev-dependencies]
 
