--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,14 @@ edition = "2021"
 serde_json = "1.0.93"
 ron = "0.8"
 serde = { version = "1", features = ["derive"] }
-ode_solvers = "0.3.7"
 itertools = "0.10.5"
 thiserror = "1.0.38"
 physical_constants = "0.5.0"
 assert_float_eq = "1.1.3"
 anyhow = "1.0.69"
 nalgebra = "0.32.1"
+num-traits = "0.2.15"
+simba = "0.8.0"
 
 [dev-dependencies]
 
